# Fund_Analysis

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: github-research.md  mvp-architecture.md  product-requirements.md
knowledge/: README.md
knowledge/finance-theory/: behavioral-cycles.md  factor-investing.md  fund-analysis.md  macro-policy.md  portfolio-risk.md  valuation.md
scripts/: run_agent.cmd
src/fund_agent/: __init__.py  analytics.py  cli.py  env.py  graph.py  nodes.py  providers.py  rag.py  state.py
src/fund_agent/data/: __init__.py  sample_snapshot.json
tests/: test_analytics.py  test_graph.py  test_openai_provider.py  test_rag.py
web/: .gitignore  API_KEYS.md  README.md  eslint.config.mjs  index.html  mcp.config.example.json  package-lock.json  package.json  requirements-mcp.txt  tsconfig.json  vite.config.ts
web/mcp/: alipay_fund_server.py  eastmoney_server.py  env_loader.py  ifind_server.py  rag_admin.py  rag_server.py
web/scripts/: dev.mjs  test-live.mjs  test-mcp-live.mjs  test-mcp.mjs  test-valuation-live.mjs
web/server/: fund-service.mjs  index.mjs  load-env.mjs  mcp-client.mjs  openai-compatible.mjs
web/src/: App.tsx  api.ts  styles.css  types.ts
web/src/components/: AIAnalysis.tsx  FundRealtime.tsx  HoldingChanges.tsx  HoldingsTable.tsx  Icon.tsx  NavChart.tsx  NewsRadar.tsx  PortfolioMonitor.tsx  RealtimeMarket.tsx  RiskCenter.tsx  SearchBar.tsx  SignalEngine.tsx  ValuationPanel.tsx
web/tests/: frontend.test.mjs  fund-context.test.mjs  mcp.test.mjs  openai-compatible.test.mjs
